# WorldRacer

./: .tm_project.cache  ChangeLog  ChangeLog~  Makefile  Makefile.am~  Makefile.in  Makefile.in~  Pod_Racer_Clone.prj  Pod_Racer_Clone.prj.bak  Pod_Racer_Clone.pws  README  aclocal.m4  config.cache  config.h  config.h.in  config.status  configure  configure.in  configure.in~  libtool
include/: Bush.h  Bushes.h  Camera.h  Functions.h  Game_Class.h  HUD.h  Light.h  MD3Functions.h  Makefile  Makefile.am  Makefile.in  Md3.h  Object_Loader.h  Quad_Object.h  Speed_Display.h  Terrain.h  Texture.h  Track_Marker.h  World.h  display_text.h  main.h  path.h  player.h  terrain_object.h  terrain_objects.h  terrain_reflection_map.h  tga.h  track.h  track_selection.h
src/: Bush.cpp  Bushes.cpp  Camera.cpp  Functions.cpp  Game_Class.cc  HUD.cpp  Light.cpp  MD3Functions.cpp  Makefile  Makefile.am  Makefile.in  Md3.cpp  Md3.h  Object_Loader.cpp  Path.txt  Quad_Object.cpp  Quad_Object.h  Speed_Display.cc  Terrain.cpp  Texture.cpp  Track_Marker.cpp  WoldRacer.desktop  World.cpp  display_text.cpp  main.cc  path.cc  player.cpp  start_WorldRacer.sh  terrain_object.cpp  terrain_objects.cpp  terrain_reflection_map.cpp  tga.c  track_selection.cpp
src/.deps/: Bush.P  Bushes.P  Camera.P  Functions.P  Game_Class.P  HUD.P  Light.P  MD3Functions.P  Md3.P  Object_Loader.P  Quad_Object.P  Speed_Display.P  Terrain.P  Texture.P  Track_Marker.P  World.P  display_text.P  main.P  path.P  player.P  player.pp  terrain_object.P  terrain_objects.P  tga.P  track_selection.P
src/.xvpics/: AI_Icon.tga  AI_Won.tga  Icon.tga  Player_Icon.tga  Player_Won.tga  Test_Color.tga  Test_Color_map.tga  Texture1.tga  Texture2.tga  You_Won.tga  font_mask.tga
src/Backup files/: main.cc
src/data/: AI_Icon.tga  AI_Won.tga  Bottom.tga  Bush.tga  Front.tga  Icon.tga  Left.tga  Player_Icon.tga  Player_Won.tga  Right.tga  Test.tga  Test_Texture.tga  Texture2.tga  Top.tga  (+3 more)
(+59 files in other folders)
