## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

pod_racer_clone_includedir = $(pkgincludedir)

pod_racer_clone_include_DATA = \
	Camera.h\
	Functions.h\
	Game_Class.h\
	Light.h\
	MD3Functions.h\
	Md3.h\
	Object_Loader.h\
	Quad_Object.h\
	Terrain.h\
	Texture.h\
	main.h\
	tga.h\
	player.h\
	path.h\
	HUD.h\
	Speed_Display.h\
	display_text.h\
	Track_Marker.h\
	track_selection.h\
	World.h\
	Bush.h\
	Bushes.h\
	terrain_object.h\
	terrain_objects.h\
	terrain_reflection_map.h

EXTRA_DIST = $(pod_racer_clone_include_DATA)
